--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                                    <a class="nav-link fw-bold active" aria-current="page" href="#">HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">ABOUT</a>
+                                    <a class="nav-link fw-bold" href="#">ABOUT</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">PRODUCT</a>
+                                    <a class="nav-link fw-bold" href="#">PRODUCT</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">CONTACT US</a>
+                                    <a class="nav-link fw-bold" href="#">CONTACT US</a>
                                 </li>
                             </ul>
                         </div>
@@ -58,6 +58,7 @@
             </div>
         </div>
 
+        <!--* Banner section *-->
         <div class="container">
             <div class="row pt-5">
                 <div class="col-lg-6 col-md-6 col-sm-12">
@@ -77,58 +78,66 @@
         </div>
     </section>
 
+
+    <!--*Left Card with Shopping Svg *-->
     <section>
         <div class="container">
             <div class="row pad-top">
                 <div class="col-lg-6 col-md-6 col-sm-12">
+
+                    <!-- * 1st Card -->
                     <div class="card mb-5 shadow rounded-3">
                         <div class="card-body row">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="col-lg-4 col-md-4 col-sm-12">
-                                    <div>
+                                    <div class="w-75 mx-auto">
                                         <img src="./photos//side-card1.png" alt="side card 1" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="col-lg-8 col-md-8 col-sm-12 ms-3 overflow-hidden">
-                                <h5 class="card-title">Find The Perfect Fit</h5>
+                                <h4 class="card-title mb-3">Find The Perfect Fit</h4>
                                 <p class="card-text">Everybody is different, Which is way we offer styles for everybody.</p>
                                 </div>
                             </div>
                         </div>
                       </div>
 
+                      <!--* 2nd Card -->
                       <div class="card mb-5 shadow rounded-3">
                         <div class="card-body row">
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="col-lg-4 col-md-4 col-sm-12">
-                                    <div>
+                                    <div class="w-75 mx-auto">
                                         <img src="./photos//side-card3.png" alt="side card 1" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="col-lg-8 col-md-8 col-sm-12 ms-3 overflow-hidden">
-                                <h5 class="card-title">Free Exchanges</h5>
+                                <h4 class="card-title mb-3">Free Exchanges</h4>
                                 <p class="card-text">One of the many reasons you can shop with peace of mind.</p>
                                 </div>
                             </div>
                         </div>
                       </div>
 
+                      <!--* 3rd Card -->
                       <div class="card shadow rounded-3">
                         <div class="card-body row">
                            <div class="d-flex justify-content-between align-items-center">
                                 <div class="col-lg-4 col-md-4 col-sm-12">
-                                    <div>
+                                    <div class="w-75 mx-auto"> 
                                         <img src="./photos//side-card2.png" alt="side card 1" class="img-fluid">
                                     </div>
                                 </div>
                                 <div class="col-lg-8 col-md-8 col-sm-12 ms-3 overflow-hidden">
-                                <h5 class="card-title">Conact Our Seller</h5>
+                                <h4 class="card-title mb-3">Conact Our Seller</h4>
                                 <p class="card-text">There are hre help to you. That's quite literally what we pay them for.</p>
                                 </div>
                            </div>
                         </div>
                       </div>
                 </div>
+
+                <!--* shopping SVG -->
                 <div class="col-lg-6 col-md-6 col-sm-12 my-auto">
                     <div>
                         <img src="./photos/shopping-pic.png" alt="shopping svg picture" class="img-fluid">
@@ -136,6 +145,135 @@
                 </div>
             </div>
         </div>
+    </section>
+
+
+    <!--* Casual Shoes Card *-->
+    <section class="container pad-top">
+        <div class="container">
+            <h2 class="text-center my-5">CASUAL SHOES</h2>
+        </div>
+
+
+        <!--* shoes casual items-->
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+
+            <div class="col">
+                <!--* 1st card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe11.png" class="card-img-top img-fluid" alt="shoe1">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sneakers Basketball Shoe</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                    <h4 class="price-tag">$86.66</h4>
+                    <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col">
+                <!--* 2nd card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe12.png" class="card-img-top img-fluid" alt="shoe2">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sneakers Skate Shoe</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This content bit longer.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                    <h4 class="price-tag">$68.68</h4>
+                    <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col">
+                <!--* 3rd card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe13.png" class="card-img-top img-fluid" alt="shoe">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Nike Shoe</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                  <h4 class="price-tag">$66.88</h4>
+                  <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+
+
+
+    <!--* Formal Shoes *-->
+    <section class="container pad-top">
+        <div class="container">
+            <h2 class="text-center my-5">FORMAL SHOES</h2>
+        </div>
+
+
+        <!--* shoes formal items-->
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+
+            <div class="col">
+                <!--* 1st card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe21.png" class="card-img-top img-fluid" alt="shoe1">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sneakers Basketball Shoe</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                    <h4 class="price-tag">$66.88</h4>
+                    <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col">
+                <!--* 2nd card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe22.png" class="card-img-top img-fluid" alt="shoe2">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Sneakers Skate Shoe</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This content bit longer.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                    <h4 class="price-tag">$88.66</h4>
+                    <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                  </div>
+              </div>
+            </div>
+
+            <div class="col">
+                <!--* 3rd card shoe  -->
+              <div class="card card-style shadow-lg h-100">
+                <div class="shoe-style">
+                    <img src="./photos/shoe23.png" class="card-img-top img-fluid" alt="shoe">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Nike Shoe</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                  <h4 class="price-tag">$68.86</h4>
+                  <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
     </section>
 
 
