--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
                   <h5 class="card-title">Sneakers Basketball Shoe</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
+                <div class="ps-3 star-icon">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
                 <div class="card-footer card-bott d-flex justify-content-between align-items-center">
                     <h4 class="price-tag">$86.66</h4>
                     <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
@@ -185,6 +191,13 @@
                   <h5 class="card-title">Sneakers Skate Shoe</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This content bit longer.</p>
                 </div>
+                <div class="ps-3 star-icon">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
                 <div class="card-footer card-bott d-flex justify-content-between align-items-center">
                     <h4 class="price-tag">$68.68</h4>
                     <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
@@ -201,6 +214,12 @@
                 <div class="card-body">
                   <h5 class="card-title">Nike Shoe</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="ps-3 star-icon">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
                 </div>
                 <div class="card-footer card-bott d-flex justify-content-between align-items-center">
                   <h4 class="price-tag">$66.88</h4>
@@ -233,6 +252,12 @@
                   <h5 class="card-title">Sneakers Basketball Shoe</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
+                <div class="ps-3 star-icon">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
                 <div class="card-footer card-bott d-flex justify-content-between align-items-center">
                     <h4 class="price-tag">$66.88</h4>
                     <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
@@ -250,6 +275,12 @@
                   <h5 class="card-title">Sneakers Skate Shoe</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content. This content bit longer.</p>
                 </div>
+                <div class="ps-3 star-icon">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                </div>
                 <div class="card-footer card-bott d-flex justify-content-between align-items-center">
                     <h4 class="price-tag">$88.66</h4>
                     <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
@@ -259,23 +290,53 @@
 
             <div class="col">
                 <!--* 3rd card shoe  -->
-              <div class="card card-style shadow-lg h-100">
-                <div class="shoe-style">
-                    <img src="./photos/shoe23.png" class="card-img-top img-fluid" alt="shoe">
-                </div>
-                <div class="card-body">
-                  <h5 class="card-title">Nike Shoe</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer card-bott d-flex justify-content-between align-items-center">
-                  <h4 class="price-tag">$68.86</h4>
-                  <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
-                </div>
-              </div>
+                <div class="card card-style shadow-lg h-100">
+                    <div class="shoe-style">
+                        <img src="./photos/shoe23.png" class="card-img-top img-fluid" alt="shoe">
+                    </div>
+                    <div class="card-body">
+                      <h5 class="card-title">Nike Shoe</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="ps-3 star-icon">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-half" aria-hidden="true"></i>
+                    </div>
+                    <div class="card-footer card-bott d-flex justify-content-between align-items-center">
+                      <h4 class="price-tag">$68.86</h4>
+                      <button class="custom-btn"><span><i class="fa fa-shopping-cart mx-2" aria-hidden="true"></i></span> Buy Now</button>
+                    </div>
+                  </div>
             </div>
           </div>
     </section>
 
+
+    <!--* Discout offer -->
+    <section>
+        <div class="container">
+            <div class="offer row">
+                <div class="col-lg-8 d-flex align-items-center">
+                    <div class="content-offer">
+                        <h1 class="text-center text-white">Winter Sale Oneday Offer</h1>
+                        <h1 class="text-center text-info">Up To 55% Discout On Black Friday Offer</h1>
+                        <div class="text-center">
+                            <button class="btn btn-warning fw-bold text-white">Shop Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <img src="./photos/special-discount.jpg" alt="" class="img-fluid float-right">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!--* Customer Feedback*-->
 
     <!--* Bundle Bootstrap Js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
