--- a/index.html
+++ b/index.html
@@ -29,32 +29,34 @@
 <body>
     <!--* Navbar  -->
     <section>
-        <div class="container">
-            <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="#"><img src="./photos/Logo.png" alt="logo" class="img-fluid"></a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold active" aria-current="page" href="#">HOME</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold" href="#">ABOUT</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold" href="#">PRODUCT</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link fw-bold" href="#">CONTACT US</a>
-                                </li>
-                            </ul>
+        <div class="bg-light">
+            <div class="container">
+                <div class="row">
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#"><img src="./photos/Logo.png" alt="logo" class="img-fluid"></a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold active" aria-current="page" href="#">HOME</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold" href="#">ABOUT</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold" href="#">PRODUCT</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link fw-bold" href="#">CONTACT US</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                  </nav>
+                      </nav>
+                </div>
             </div>
         </div>
 
@@ -150,7 +152,7 @@
 
     <!--* Casual Shoes Card *-->
     <section class="container pad-top">
-        <div class="container">
+        <div class="container header-title">
             <h2 class="text-center my-5">CASUAL SHOES</h2>
         </div>
 
@@ -234,7 +236,7 @@
 
     <!--* Formal Shoes *-->
     <section class="container pad-top">
-        <div class="container">
+        <div class="container header-title">
             <h2 class="text-center my-5">FORMAL SHOES</h2>
         </div>
 
@@ -337,6 +339,93 @@
 
 
     <!--* Customer Feedback*-->
+    <section class="pad-top">
+        <div class="testimonial-area">
+            <div class="container">
+
+                <div class="header-title mb-5">
+                    <h2 class="text-center ">TESTIMONIAL</h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+
+                        <div class="single-testimonial">
+                            <div class="img-area">
+                                <img src="./photos/client.jpg" alt="Client three" class="img-fluid">
+                            </div>
+                            <div class="testi-text shadow-lg">
+                                <h4>Binn Deal <span>-MD,Needlies.inc</span></h4>
+                                <p><sup><i class="fa fa-quote-left" aria-hidden="true"></i></sup>
+                                    &nbsp; Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, dolores blanditiis. Quia iste earum possimus nesciunt ex optio ipsum ab tempore eius molestiae provident, asperiores, unde mollitia quisquam porro veniam...&nbsp;
+                                    <sub>
+                                        <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                    </sub>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- * Footer * -->
+    <section class="contaier-fluid bg-dark">
+        <div class="container">
+            <div class="row text-white custom-footer">
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <h4 class="text-center mb-4">About</h4>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Our Values</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Our Difference</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>FAQ</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Contact Us</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Careers</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <h4 class="text-center mb-4">Resources</h4>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>My Account</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Store Locator</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Newsletter</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Recipes</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Canadian Products</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <h4 class="text-center mb-4">Legal</h4>
+                    <ul>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Terms & Conditions</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Retailer Policy</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Privacy Policy</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Our Guarantee</a></li>
+                        <li><a href="#"><i class="fa fa-arrows-alt me-3" aria-hidden="true"></i>Rewards Terms of     Use</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <h4 class="text-center mb-4">Contact Us</h4>
+                    <ul>
+                        <li>
+                            <form class="d-flex">
+                                <input class="form-control me-2" type="email" placeholder="Enter email" aria-label="Search">
+                                <button class="btn btn-success" type="submit">Email</button>
+                            </form>
+                        </li>
+                        <li><a href="#">* We protect your privacy</a></li>
+                    </ul>
+                    <h5 class="ms-4">Payment</h5>
+                    <ul class="money-card">
+                        <li><a href="#"><img src="./photos/visa1.png" alt="visa"></a></li>
+                        <li><a href="#"><img src="./photos/mastercard1.png" alt="master"></a></li>
+                        <li><a href="#"><img src="./photos/paypal1.png" alt="paypal"></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!--* Bundle Bootstrap Js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
